[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/fonts/autowide/Audiowide-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/poppins/Poppins-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/poppins/Poppins-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/Grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/poppins/Poppins-SemiBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/Home.gd" type="Script" id=7]
[ext_resource path="res://scenes/LevelSelect.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/fonts/poppins/Poppins-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=11]
size = 102
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;

void fragment()
{
	vec4 cur_color = texture(TEXTURE, UV); // Read from texture again.
	COLOR = color;
	COLOR.a = cur_color.a;
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=10]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_editor_description_": "																			11	xy<"
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.88776
margin_bottom = -1.8877
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.05
anchor_right = 0.98
anchor_bottom = 0.95
custom_constants/separation = 150
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 9.0
margin_right = 691.0
margin_bottom = 153.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "Qubes"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 303.0
margin_right = 691.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 25
alignment = 1

[node name="PackLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 210.0
margin_bottom = 46.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "Classic "
align = 1
valign = 1

[node name="Dash" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 235.0
margin_right = 254.0
margin_bottom = 46.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "-"
align = 1
valign = 1

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 279.0
margin_right = 469.0
margin_bottom = 46.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 2 )
text = "Introduction"
align = 1
valign = 1

[node name="Dash2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 494.0
margin_right = 512.0
margin_bottom = 46.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 2 )
text = "-"
align = 1
valign = 1

[node name="PuzzleLevel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 537.0
margin_right = 607.0
margin_bottom = 46.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
text = "1/100"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 499.0
margin_right = 691.0
margin_bottom = 899.0
custom_constants/separation = 80
alignment = 1

[node name="Previous" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
material = SubResource( 13 )
margin_left = 15.0
margin_top = 175.0
margin_right = 65.0
margin_bottom = 225.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 18, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 6
flip_h = true

[node name="Grid" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 145.0
margin_top = 0.0
margin_right = 545.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 0
size_flags_vertical = 4
columns = 4
rows = 4

[node name="GridButton" type="Button" parent="VBoxContainer/HBoxContainer2/Grid"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Next" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
material = SubResource( 13 )
margin_left = 625.0
margin_top = 175.0
margin_right = 675.0
margin_bottom = 225.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 1049.0
margin_right = 691.0
margin_bottom = 1142.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Play"

[node name="LevelSelect" parent="." instance=ExtResource( 8 )]
visible = false
